# KodiTv

./: .gitignore  CMakeLists.txt  KodiTv.pro  README.md
backends/: CMakeLists.txt  kodimysqldatabase.cpp  kodimysqldatabase.h  querythread.cpp  querythread.h  test2plugin.cpp  test2plugin.h  testplugin.cpp  testplugin.h
data/: basicexample.json.bk  basicexample.json.bk2  basicexample.json.bk3  channelData.json
include/: CMakeLists.txt  backendplugininterface.h  config.h  connection.h
src/: CMakeLists.txt  autochannels.cpp  autochannels.h  backendplugininterface.h  config.h.in  core.cpp  core.h  koditv.cpp  koditv.h  main.cpp
src/json/: CMakeLists.txt  channelmodelfromjson.cpp  channelmodelfromjson.h  channelmodeltojson.cpp  channelmodeltojson.h
src/models/: CMakeLists.txt  channelmodel.cpp  channelmodel.h  conditions.cpp  conditions.h  criteria.cpp  criteria.h
tests/: CMakeLists.txt  channelmodeljsontest.cpp  channelmodeltest.cpp  criteriatest.cpp  kodimysqldbtest.cpp  testplugintest.cpp
tests/uitests/: CMakeLists.txt  tst_Something.cpp  tst_Something.qml
